adds sample pages - there's no (usable) content. also fixes input server crash

--- a/views/error.pug
+++ b/views/error.pug
@@ -3,4 +3,4 @@ extends layout
 block content
   h1= message
   h2= error.status
-  pre #{error.stack}
+  p There was some kind of error, try checking your link?
